# testing-module-logger-with-pytest

./: .flake8  Dockerfile.vscode  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
src/: lib_with_module_logger.py  lib_with_root_logger.py  loggers.py
tests/: conftest.py  test_add.py
